[tool.poetry]
name = "learning-rag"
version = "0.1.0"
description = ""
authors = ["Parth Sinha <sinhaparth555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.0"
sentence-transformers = "^3.0.1"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
